--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_agenda">Agenda</string>
+    <string name="title_activity_voice">Voice Memo</string>
     <string name="title_activity_add_event">Add Event</string>
 
     <string-array name="reminders_array">
